@@ -369,6 +369,28 @@ If it's true, controller will auto-detect its groupmembers with multicast.
       </hint>
     </config>
   </category>
+
+  <category name="vera"> 
+    <description> 
+        <![CDATA[ 
+          Configuration for the Vera protocol 
+        ]]> 
+      </description> 
+    <config name="protocol.vera.classname" value="org.openremote.controller.protocol.vera.VeraCommandBuilder"> 
+      <hint> 
+          <![CDATA[ 
+           Vera CommandBuilder class. This entry should not be changed. 
+          ]]> 
+        </hint> 
+    </config> 
+    <config name="vera.address" value=""> 
+      <hint> 
+          <![CDATA[ 
+            The IP address of your Vera box. 
+          ]]> 
+        </hint> 
+    </config> 
+  </category> 
   
   <!--
    |
